--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,20 @@ version: "3"
 
 services:
   teavk:
-    build : 
-      context: ./
-      dockerfile: Dockerfile
-    container_name: teavk
-    environment:
-      - USER_UID=1000
-      - USER_GID=1000
+    image: ghcr.io/kaiyga/teavk:teavkbot-latest
+    container_name: teavkbot
     volumes:
       - ./config.yml:/home/teavk/config.yml
     restart: unless-stopped
+
+  # teavk:
+  #   build : 
+  #     context: ./
+  #     dockerfile: Dockerfile
+  #   container_name: teavkbot_selfbuild
+  #   environment:
+  #     - USER_UID=1000
+  #     - USER_GID=1000
+  #   volumes:
+  #     - ./config.yml:/home/teavk/config.yml
+  #   restart: unless-stopped
